syntax = "proto3";

option go_package="auth/proto";

package proto;

service LoginService {
    rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

service SessionDataService {
  rpc GetSessionData(GetSessionDataRequest) returns (GetSessionDataResponse);
}

message GetSessionDataRequest {
  string token = 1;
}

message GetSessionDataResponse {
  string username = 1;
  string profile_url = 2;
}
